fix warning for dynamic agent loading on surefire plugin, fixed ids of jacoco executions and added some tests to authorization-api